@@ -40,8 +40,8 @@ tab-width:			8
 text-column:			72
 # Maximum word-length for COBOL words / Programmer defined words
 # Be aware that GC checks the word length against COB_MAX_WORDLEN
-# first (currently 61)
-word-length:			61
+# first (currently 63)
+word-length:			63
 
 # Maximum literal size in general
 literal-length:			8191
