@@ -39,9 +39,9 @@ standard-define			1
 tab-width:			8
 text-column:			72
 # Maximum word-length for COBOL words / Programmer defined words
-# current max (COB_MAX_WORDLEN): 61
+# current max (COB_MAX_WORDLEN): 63
 #word-length:			127
-word-length:			61
+word-length:			63
 literal-length:			8192
 numeric-literal-length:	18
 pic-length:				50
