@@ -42,9 +42,9 @@ standard-define			6
 tab-width:			8  # not verified yet
 text-column:			72 # TO-DO: add >>IMP MARGIN-R (see p. 50)
 # Maximum word-length for COBOL words / Programmer defined words
-# current max (COB_MAX_WORDLEN): 61
+# current max (COB_MAX_WORDLEN): 63
 #word-length:			240
-word-length:			61
+word-length:			63
 # external-word-length:		30 # TO-DO: Add!
 literal-length:			65535
 numeric-literal-length:		30
