@@ -1,4 +1,9 @@
 
+2019-05-11  Simon Sobisch <simonsobisch@gnu.org>
+
+	* default.conf, lax.conf-inc, mf-strict, rm-strict.conf:
+	  increased word-length to 63 per COBOL 202x
+
 2019-04-07 Simon Sobisch <simonsobisch@gnu.org>
 
 	* general: FR #354 added continue-after option, set to ok
